manifests/kubevirt/VMs/mediacms/mediacms-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mediacms
  namespace: default
spec:
  podSelector:
    matchLabels:
      vm.kubevirt.io/name: mediacms
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rke2-ingress-nginx
      ports:
        - port: 443
        - port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kubevirt
          podSelector:
            matchLabels:
              kubevirt.io: virt-api
      ports:
        - port: 22
        - port: 80
  egress:
    # - to: 
    #     - ipBlock:
    #         cidr: 0.0.0.0/0
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 10.0.2.8/32
      ports:
        - port: 587
        - port: 465
        - port: 25
